# pico-pong

./: CMakeLists.txt  Makefile  pico-sx126x  reset  semtech-pico-hal
src/: main.c  pico.c
